--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -378,8 +378,9 @@ aside .newsletter{
     }
 }
 
-.sp-social-buttons.amp{
-  margin-top:40px;
+.sp-social-buttons.amp,
+.sp-social-buttons.amc{
+  margin-top:20px;
 
 }
 
